# HPL

./: .gitignore  .pypirc.template  BUILD_GUIDE.md  ERROR_HANDLING_ANALYSIS_FIXED.md  MANIFEST.in  README.md  README_PYPI.md  TODO.md  build_exe.py  build_package.py  hpl.py  hpl_debug.py  hpl_launcher.py  install_local.py  pyproject.toml  run_example.py  upload_to_pypi.py
docs/: HPL_EXE_Usage_Guide.md  HPL语法手册.md  HPL语法概览.md  hpl_runtime工作原理.md  架构.md  第三方库支持.md
docs/wiki/: doc.md  help.md  home.md
examples/: base.hpl  complex_demo.hpl  declarative_game_demo.hpl  demo_re_net.hpl  exampl.hpl  example.hpl  input_example.hpl  simple_declarative.hpl  test_new_stdlib.hpl  test_syntax_error.hpl  test_user_data.hpl  text_game_framework.hpl
examples/error_test_cases/: README.md  class_syntax_errors.hpl  combined_errors.hpl  control_flow_errors.hpl  expression_errors.hpl  hpl_syntax_errors.hpl  import_include_errors.hpl  test_errors.py  yaml_syntax_errors.hpl
examples/include_test/: data_lib.hpl  data_merge_test.hpl
examples/tests/: test_elif_native.hpl  test_fixes.hpl  (+3 more)
hpl_runtime/: __init__.py  ast_parser.py  evaluator.py  exceptions.py  interpreter.py  lexer.py  models.py  module_loader.py  parser.py
src/: ast_parser.py  evaluator.py  interpreter.py  lexer.py  models.py  module_loader.py  parser.py
tests/: run_tests.py  test_ast_parser.py  test_circular_imports.py  test_class_inheritance.py  test_edge_cases.py  test_evaluator.py  test_indent_boundary.py  test_integration.py  test_interpreter.py  test_lexer.py  test_models.py  test_module_edge_cases.py  test_module_loader.py  test_nested_import_context.py  test_new_stdlib.py  test_package_manager.py  test_package_structure.py  test_parser.py  test_path_utils.py  test_recursion_limits.py  test_regression.py  test_stdlib.py  test_text_utils.py
(+70 files in other folders)
