[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpl-runtime"
version = "1.1.2"
description = "HPL (H Programming Language) 是一种基于 YAML 格式的面向对象编程语言"
readme = "README_PYPI.md"

license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "奇点工作室", email = "hechengyancheng@qq.com"}
]
keywords = ["hpl", "yaml", "programming-language", "interpreter", "runtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=0.8.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
hpl = "hpl_runtime.interpreter:main"
hpl-run = "hpl_runtime.interpreter:main"

[project.urls]
Homepage = "https://github.com/TheSingularityStudio/HPL"
Documentation = "https://github.com/TheSingularityStudio/HPL/blob/main/docs/HPL语法手册.md"
Repository = "https://github.com/TheSingularityStudio/HPL"
Issues = "https://github.com/TheSingularityStudio/HPL/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hpl_runtime*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
hpl_runtime = ["stdlib/*.py"]
